test/deca/context/valid/3_31_print_int.deca
// Description:
//   test d'argument de print
// 
// Résultat : 
// Affiche 12

{
    int a = 12;
    print(a);

}