test/deca/context/invalid/2_9_param_void2.deca
// Description:
//    parametres de  type void
//
// Resultats:
//    Ligne 8

class A {
   void truc(int b, void a)  {

   }
}
